# pydoca

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  upload-coverage.yml
pydoca/: __init__.py  aggregate_root.py  bootstrap.py  entity.py  event.py  port_adapter.py  repository.py  unit_of_work.py  use_case.py  utils.py  value_object.py
tests/integration/: conftest.py  test_api.py
tests/integration/test_app/budget/: __init__.py  configuration.py
tests/integration/test_app/budget/actors/: api.py
tests/integration/test_app/budget/application/: __init__.py  _ports.py  add_to_budget.py  calculate_cashflow.py  create_budget.py
tests/integration/test_app/budget/domain/: __init__.py  budget.py
tests/integration/test_app/budget/providers/: __init__.py  fake_exchange_svc.py  inmemory_budget_repo.py
tests/unit/: conftest.py  test_aggregate_root.py  test_entity.py  test_event.py  test_port_adapter.py  test_use_case.py  test_value_object.py
