[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydoca"
description = "Domain-Oriented Clean Architecture Python library."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Jean-Christophe Rosier", email = "jean-christophe.rosier@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Internet",
    "Typing :: Typed",
    "Framework :: Pydantic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/jc-rosier/pydoca"
Repository = "https://github.com/jc-rosier/pydoca"

[project.optional-dependencies]
lint = [
    "pre-commit",
    "ruff",
    "black",
    "mypy",
]
test = [
    "pytest",
    "coverage[toml]",
    "uvicorn",
    "fastapi",
    "requests",
]

[tool.pytest.ini_options]
addopts = "--exitfirst"

[tool.coverage.run]
source = [
    "tests",
    "pydoca"
]
context = '${CONTEXT}'

[tool.mypy]
strict = true

[tool.hatch.version]
path = "pydoca/__init__.py"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

isort = { known-first-party = ["pydoca"] }

[tool.ruff.pydocstyle]
convention = "google"
